gccida/g2/sched_analyze_2
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1169:24: error: unknown type name 'deps_0'
void  sched_analyze_2( deps_0 *deps, rtx x, rtx insn) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1182:4: error: expected ';' after expression
rtx v16; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1182:5: error: use of undeclared identifier 'v16'
rtx v16; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1183:4: error: expected ';' after expression
rtx pending_read_insns; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1183:5: error: use of undeclared identifier 'pending_read_insns'
rtx pending_read_insns; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1184:4: error: expected ';' after expression
rtx pending_read_mems; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1184:5: error: use of undeclared identifier 'pending_read_mems'
rtx pending_read_mems; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1185:4: error: expected ';' after expression
rtx pending_write_insns; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1185:5: error: use of undeclared identifier 'pending_write_insns'
rtx pending_write_insns; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1186:4: error: expected ';' after expression
rtx i; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1186:5: error: use of undeclared identifier 'i'
rtx i; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1187:4: error: expected ';' after expression
rtx last_pending_memory_flush; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1187:5: error: use of undeclared identifier 'last_pending_memory_flush'
rtx last_pending_memory_flush; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1191:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1191:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1198:4: error: expected ';' after expression
rtx v32; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1198:5: error: use of undeclared identifier 'v32'
rtx v32; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1202:6: error: use of undeclared identifier 'mem_list'; did you mean 'memalign'?
rtx *mem_list; // [rsp+0h] [rbp-40h] 
     ^~~~~~~~
     memalign
/usr/include/malloc.h:64:14: note: 'memalign' declared here
extern void *memalign (size_t __alignment, size_t __size)
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/sched-deps.c:1202:5: error: invalid operands to binary expression ('struct rtx_def *' and 'void *(size_t, size_t)' (aka 'void *(unsigned long, unsigned long)'))
rtx *mem_list; // [rsp+0h] [rbp-40h] 
~~~ ^~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/sched_analyze_2/src/obj/sched-deps.o] Error 1
